--- a/scss/style.scss
+++ b/scss/style.scss
@@ -156,10 +156,12 @@ header {
   margin-bottom: 160px;
   .artists__header {
     height: 90px;
+    margin-left: -1000px;
     margin-bottom: 120px;
-    h1 {
+    display: flex;
+    h3 {
+      padding: 0px 100px;
       @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
-      text-align: center;
     }
   }
   .artists__block {
@@ -389,13 +391,13 @@ header {
   }
 }
 .team {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   &__title {
-    margin: 95px 0px 130px 0px;
-    @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
-    text-align: center;
+    display: flex;
+    margin: 95px 0px 130px -600px;
+    h3 {
+      padding: 0px 100px;
+      @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
+    }
   }
   &__container {
     max-width: 1160px;
@@ -403,12 +405,12 @@ header {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin-right: -50px;
+    margin: 0 auto;
     .team__person {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 50px;
+      margin: 0px 5px;
       img {
         max-width: 320px;
         max-height: 320px;
@@ -628,7 +630,8 @@ footer {
     .artists__header {
       height: 65px;
       margin-bottom: 85px;
-      h1 {
+      h3 {
+        padding: 0px 700px;
         @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
       }
     }
@@ -778,16 +781,14 @@ footer {
   }
   .team {
     &__title {
-      margin: 65px 0px 90px 0px;
-      @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
+      margin: 65px 0px 90px -400px;
+      h3 {
+        padding: 0px 70px;
+        @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
+      }
     }
     &__container {
-      margin-right: -35px;
       .team__person {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-right: 35px;
         img {
           max-width: 225px;
           max-height: 225px;
@@ -969,7 +970,8 @@ footer {
     .artists__header {
       height: 45px;
       margin-bottom: 60px;
-      h1 {
+      h3 {
+        padding: 0px 50px;
         @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
       }
     }
@@ -1120,16 +1122,17 @@ footer {
   }
   .team {
     &__title {
-      margin: 45px 0px 65px 0px;
-      @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
+      margin: 45px 0px 65px 250px;
+      h3 {
+        padding: 0px 50px;
+        @include fontHeader($sizeFontHeader * 2, $mFontColor, 400);
+      }
     }
     &__container {
-      margin-right: -25px;
+     
       .team__person {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-right: 25px;
+    
+
         img {
           max-width: 160px;
           max-height: 160px;
@@ -1231,4 +1234,8 @@ footer {
 .activate__story {
   color: $additionColor !important;
   background-color: $bgBlocksColor;
+}
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
