--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -12,3 +12,6 @@ $sizeFontTitle: 21px;
 $sizeFontSmallText: 16px;
 $sizeFontVerySmallText: 11px;
 
+/* $additionColorRgb75: rgba(141, 253, 27, 0.75);
+$additionColorRgb50: rgba(141, 253, 27, 0.5);
+$additionColorRgb25: rgba(141, 253, 27, 0.25); */
